// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should accept the loading prop 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
  pointer-events: none;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

.emotion-0 span {
  color: transparent;
}

.emotion-0:after {
  -webkit-animation: animation-1scjtrl 500ms infinite linear;
  animation: animation-1scjtrl 500ms infinite linear;
  border: 3px solid currentColor;
  border-radius: 50%;
  border-right-color: transparent;
  border-top-color: transparent;
  content: "";
  display: block;
  height: 1.5em;
  width: 1.5em;
  position: absolute;
  left: calc(50% - (1.5em / 2));
  top: calc(50% - (1.5em / 2));
}

<button
  class="emotion-0"
  type="button"
>
  <span>
    <span>
      Botão
    </span>
  </span>
</button>
`;

exports[`Button should render correctly with icon only 1`] = `
.emotion-2 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-2:not(:disabled):hover {
  background-color: #ebebeb;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

<button
  class="emotion-2"
  type="button"
>
  <span>
    <span
      class="emotion-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="Ajustes"
        >
          <path
            d="M16 12a4 4 0 1 0-3.86-5H4v1.88h8.1A4 4 0 0 0 16 12zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2zM8 12a4 4 0 1 0 3.9 4.88H20V15h-8.14A4 4 0 0 0 8 12zm0 6a2 2 0 1 1 2-2 2 2 0 0 1-2 2z"
          />
        </g>
      </svg>
    </span>
  </span>
</button>
`;

exports[`Button should render correctly with label 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

<button
  class="emotion-0"
  type="button"
>
  <span>
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Button should render the danger type 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  background-color: #E0001A;
  color: #FFFFFF;
  border: 1px solid #E0001A;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

.emotion-0:not(:disabled):hover {
  background-color: #ce0018;
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #E0001A;
}

<button
  class="emotion-0"
  type="button"
>
  <span>
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Button should render the danger type 2`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  border: 1px solid #E0001A;
  color: #E0001A;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: rgba(128,128,128,0.16);
}

.emotion-0:not(:disabled):hover {
  background-color: rgba(224,0,26,0.1);
}

.emotion-0:focus {
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #E0001A;
}

<button
  class="emotion-0"
  type="button"
>
  <span>
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Button should render the danger type 3`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: rgba(128,128,128,0.16);
}

<button
  class="emotion-0"
  type="button"
>
  <span>
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Button should render the primary type 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  cursor: pointer;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  background-color: #056DFF;
  color: #ffffff;
  border: 1px solid #056DFF;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

.emotion-0:not(:disabled):hover {
  background-color: #0564eb;
}

<button
  class="emotion-0"
  type="button"
>
  <span>
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Button should render the primary type 2`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  border: 1px solid #056DFF;
  color: #056DFF;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: rgba(128,128,128,0.16);
}

.emotion-0:not(:disabled):hover {
  background-color: rgba(5,109,255,0.16);
}

<button
  class="emotion-0"
  type="button"
>
  <span>
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Button should render the primary type 3`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: rgba(128,128,128,0.16);
}

<button
  class="emotion-0"
  type="button"
>
  <span>
    <span>
      Button
    </span>
  </span>
</button>
`;
